# midibridge

./: CMakeLists.txt  README.md
doc/: MIDI-Bridge_UserManual(draft).odt  README.txt  SysEx_DeviceInterface_V1.0.odt  SysEx_DeviceInterface_V1.0.rtf  led-test(V2.x).syx  led-test.syx
firmware/: .gitignore  CMakeLists.txt
firmware/ld/: C15_LPC4337_main.ld  C15_LPC4337_main_MEM.ld  application.ld  application_MEM.ld  in-app-flasher.ld  in-app-flasher_MEM.ld  main.ld  sysex-isp.ld  sysex-isp_MEM.ld
firmware/src/application/: .cproject  .project  CMakeLists.txt
firmware/src/application/src/: CPU_clock.c  cr_startup_lpc43xx.c  main.c
firmware/src/application/src/devctl/: devctl.c  devctl.h
firmware/src/application/src/drv/: nl_leds.h
firmware/src/application/src/midi/: MIDI_relay.c  MIDI_statemonitor.c  MIDI_statemonitor.h
firmware/src/application/src/sys/: fwdisplay.c  fwdisplay.h  ticker.c
firmware/src/application/src/usb/: nl_usb_core.c  nl_usb_core.h  nl_usb_descmidi.c  nl_usb_descmidi.h  nl_usb_midi.c  nl_usb_midi.h
firmware/src/co-proc/: .cproject  .project  CMakeLists.txt
firmware/src/co-proc/src/: co-proc.c
firmware/src/in-app-flasher/: .cproject  .project  CMakeLists.txt
firmware/src/in-app-flasher/src/: CPU_clock.c  main.c
firmware/src/in-app-flasher/src/sys/: flash.c  flash.h
firmware/src/main/: .cproject  .project  CMakeLists.txt
firmware/src/main/src/: CPU_clock.c  CPU_clock.h  cr_startup_lpc43xx.c  main.c
firmware/src/main/src/devctl/: devctl.c  devctl.h
firmware/src/main/src/drv/: nl_dbg.c  nl_dbg.h  nl_leds.c  nl_leds.h
firmware/src/main/src/midi/: MIDI_relay.c  MIDI_relay.c.bak  MIDI_relay.h  MIDI_statemonitor.c  nl_midi_isp.c  nl_midi_isp.h  nl_midi_proxy.c  nl_midi_proxy.h
firmware/src/main/src/sys/: fwdisplay.c  nl_coos.c  ticker.h
firmware/src/main/src/usb/: nl_usb_core.c  nl_usb_core.h  nl_usb_descmidi.c  nl_usb_descmidi.h  nl_usb_midi.c  nl_usb_midi.h  nl_usba_core.c  nl_usba_core.h  nl_usba_midi.c  nl_usba_midi.h  nl_usbb_core.c  nl_usbb_core.h  nl_usbb_midi.c  nl_usbb_midi.h
firmware/src/shared/cmsis/: LPC43xx.h  lpc43xx_cgu.c
firmware/src/shared/drv/: error_display.c  error_display.h  nl_cgu.h  nl_leds.h
firmware/src/shared/io/: pins.c  pins.h
firmware/src/shared/ipc/: emphase_ipc.c  emphase_ipc.h
firmware/src/shared/midi/: nl_devctl_defs.h  nl_ispmarkers.c  nl_ispmarkers.h  nl_sysex.c  nl_sysex.h
firmware/src/shared/sys/: delays.h  globals.h  nl_version.h
firmware/src/sysex-isp/: .cproject  .project  CMakeLists.txt
firmware/src/sysex-isp/src/: CPU_clock.c  main.c
firmware/src/sysex-isp/src/sys/: flash.c  flash.h  incbin.h
tools/: CMakeLists.txt
tools/fw-uploader/: CMakeLists.txt
tools/fw-uploader/src/: main.c
tools/mk-sysex/: CMakeLists.txt
tools/mk-sysex/src/: main.c  mk-sysex.c
tools/perf-test/: CMakeLists.txt  kamidi.c  main.c  perf-test.c  testmb-r1.sh  testmb-r2.sh  testmb-s1.sh  testmb-s2.sh
tools/perf-test/bak/: main.c
